--- a/AnkiDroid/src/main/res/layout/deck_item.xml
+++ b/AnkiDroid/src/main/res/layout/deck_item.xml
@@ -34,80 +34,87 @@
         android:layout_alignParentStart="true"
         android:background="@android:color/transparent" />
     <LinearLayout
-        android:id="@+id/deck_name_linear_layout"
-        android:layout_width="wrap_content"
+        android:id="@+id/deck_row_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/indent_view"
-        android:layout_toStartOf="@+id/counts_layout"
         android:orientation="horizontal"
         android:gravity="center_vertical">
-        <ImageButton
-            android:id="@+id/deck_expander"
+
+        <LinearLayout
+            android:id="@+id/deck_name_linear_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:minWidth="48dp"
-            android:padding="12dp"
-            android:background="?attr/selectableItemBackgroundBorderless" />
-        <com.ichi2.ui.FixedTextView
-            android:id="@+id/deck_name"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <ImageButton
+                android:id="@+id/deck_expander"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:minWidth="48dp"
+                android:padding="12dp"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+            <com.ichi2.ui.FixedTextView
+                android:id="@+id/deck_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:background="@color/transparent"
+                android:gravity="start|center_vertical"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="Deck name" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/counts_layout"
+            android:contentDescription="@string/deck_picker_counts"
+            android:background="?attr/selectableItemBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
-            android:background="@color/transparent"
-            android:gravity="start|center_vertical"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textColor="?android:textColorPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="Deck name" />
-    </LinearLayout>
+            android:minWidth="70dp"
+            android:gravity="end"
+            android:layout_gravity="center_vertical">
+            <com.ichi2.ui.FixedTextView
+                android:id="@+id/deck_new"
+                android:contentDescription="@string/deck_picker_new"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/transparent"
+                android:gravity="center"
+                android:paddingEnd="5dip"
+                android:textSize="14sp"
+                tools:text="10" />
 
-    <LinearLayout
-        android:id="@+id/counts_layout"
-        android:contentDescription="@string/deck_picker_counts"
-        android:background="?attr/selectableItemBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:minWidth="70dp"
-        android:gravity="end"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true" >
-        <com.ichi2.ui.FixedTextView
-            android:id="@+id/deck_new"
-            android:contentDescription="@string/deck_picker_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/transparent"
-            android:gravity="center"
-            android:paddingEnd="5dip"
-            android:textSize="14sp"
-            tools:text="10" />
+            <com.ichi2.ui.FixedTextView
+                android:id="@+id/deck_learn"
+                android:contentDescription="@string/deck_picker_lrn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/transparent"
+                android:gravity="center"
+                android:paddingEnd="5dip"
+                android:textSize="14sp"
+                tools:text="42" />
 
-        <com.ichi2.ui.FixedTextView
-            android:id="@+id/deck_learn"
-            android:contentDescription="@string/deck_picker_lrn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/transparent"
-            android:gravity="center"
-            android:paddingEnd="5dip"
-            android:textSize="14sp"
-            tools:text="42" />
-
-        <com.ichi2.ui.FixedTextView
-            android:id="@+id/deck_review"
-            android:contentDescription="@string/deck_picker_rev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="6dip"
-            android:background="@color/transparent"
-            android:gravity="center"
-            android:textSize="14sp"
-            tools:text="13" />
+            <com.ichi2.ui.FixedTextView
+                android:id="@+id/deck_review"
+                android:contentDescription="@string/deck_picker_rev"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="6dip"
+                android:background="@color/transparent"
+                android:gravity="center"
+                android:textSize="14sp"
+                tools:text="13" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
