--- a/AnkiDroid/src/main/res/layout/note_editor_fragment.xml
+++ b/AnkiDroid/src/main/res/layout/note_editor_fragment.xml
@@ -26,14 +26,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="vertical" >
                 <com.ichi2.ui.FixedTextView
                     android:id="@+id/CardEditorModelText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="start"
                     android:layout_marginLeft="8dip"
                     android:layout_marginRight="8dip"
+                    android:layout_marginTop="8dip"
                     android:clickable="false"
                     android:gravity="start|center_vertical"
                     android:textStyle="bold"
@@ -49,14 +50,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="vertical" >
                 <com.ichi2.ui.FixedTextView
                     android:id="@+id/CardEditorDeckText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="start"
                     android:layout_marginLeft="8dip"
                     android:layout_marginRight="8dip"
+                    android:layout_marginTop="8dip"
                     android:clickable="false"
                     android:gravity="start|center_vertical"
                     android:textStyle="bold"
